--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -17,8 +17,8 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
       with:
-        submodules: true
-      
+        submodules: recursive
+    
     - name: Build and push Docker image
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
