--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -32,4 +32,12 @@ jobs:
       run: echo "github.run_id" ${{ github.run_id }}
     - name: Output Run Number
       run: echo "github.run_number" ${{ github.run_number }}
- 
+   
+    - name: Use current time        
+      env:
+        TIME: "${{ steps.time.outputs.time }}"
+        R_TIME: "${{ steps.time.outputs.readableTime }}"
+        F_TIME: "${{ steps.time.outputs.formattedTime }}"
+        YEAR: "${{ steps.time.outputs.year }}"
+        DAY: "${{ steps.time.outputs.day }}"
+      run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
