--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -18,26 +18,28 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: true
-        
-    - name: Get current time
-      uses: 1466587594/get-current-time@v2
-      id: time
+          
+    # Uso come numero di versione il github.run_number
+    - name: Generate deploy yaml
+      uses: danielr1996/envsubst-action@1.0.0
       with:
-        format: YYYYMMDD-HHMM
- 
-    - name: Output current time
-      run: echo "Current time" ${{ steps.time.outputs.formattedTime }}  
- 
-    - name: Output Run ID
-      run: echo "github.run_id" ${{ github.run_id }}
-    - name: Output Run Number
-      run: echo "github.run_number" ${{ github.run_number }}
-   
-    - name: Use current time        
+        input: template-deploy.yaml
+        output: my-deploy.yaml
       env:
-        TIME: "${{ steps.time.outputs.time }}"
-        R_TIME: "${{ steps.time.outputs.readableTime }}"
-        F_TIME: "${{ steps.time.outputs.formattedTime }}"
-        YEAR: "${{ steps.time.outputs.year }}"
-        DAY: "${{ steps.time.outputs.day }}"
-      run: echo $TIME $R_TIME $F_TIME $YEAR $DAY
+        IMG_TAG: ${{ github.run_number }}
+    
+    - name: Build and push Docker image
+      uses: mr-smithers-excellent/docker-build-push@v5
+      with:
+        image: paolabelmonte/hugo-site
+        tags: v1.2
+        registry: docker.io
+        dockerfile: Dockerfile
+        username: ${{ secrets.DOCKERHUB_USER }}
+        password: ${{ secrets.DOCKERHUB_PSW }}
+                
+    - name: Deploy website
+      uses: giorio94/kubectl-oidc-action@1.1.0
+      with:
+        kubeconfig: ${{ secrets.KUBECONFIG }}
+        args: apply -f my-deploy.yaml
