--- a/config.toml
+++ b/config.toml
@@ -5,7 +5,7 @@ theme = "hugo-learn"
 
 [params]
   themeVariant = "green"
-  disableLandingPage = true
+  disableLandingPageButton = true
 
 [outputs]
  home = [ "HTML", "RSS", "JSON"]
