--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -18,11 +18,11 @@ jobs:
         submodules: true
         
     - name: Output Run ID
-      run: echo "GITHUB_RUN_ID" ${{ GITHUB_RUN_ID }}
+      run: echo "GITHUB_RUN_ID" ${{ github_run_id }}
     - name: Output Run Number
-      run: echo "GITHUB_RUN_NUMBER" ${{ GITHUB_RUN_NUMBER }}
+      run: echo "GITHUB_RUN_NUMBER" ${{ github_run_number }}
     - name: Output SHA Commit
-      run: echo "GITHUB_SHA" ${{ GITHUB_SHA }} 
+      run: echo "GITHUB_SHA" ${{ github_sha }} 
       
     - name: Get current time
       uses: 1466587594/get-current-time@v2
