--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -22,7 +22,12 @@ jobs:
     - name: Output Run Number
       run: echo "GITHUB_RUN_NUMBER" ${{ github.run_number }}
     - name: Output SHA Commit
-      run: echo "GITHUB_SHA" ${{ github.sha }} 
+      run: echo "GITHUB_RUN_SHA" ${{ github.sha }}
+     
+    - name: Output First 8 SHA Chars
+      env:
+         SHA8: ${ github.sha ::8}
+      run: echo  "FIRST 8 SHA CHARS" $SHA8run
       
     - name: Get current time
       uses: 1466587594/get-current-time@v2
