Test using first 8 SHA chars

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,8 +26,8 @@ jobs:
      
     - name: Output First 8 SHA Chars
       env:
-         SHA: ${ github.sha }
-      run: SHA8=$(SHA::8) && echo "FIRST 8 SHA CHARS" $SHA8
+         SHA8: ${github.sha::8}
+      run: echo "FIRST 8 SHA CHARS" $SHA8
       
     - name: Get current time
       uses: 1466587594/get-current-time@v2
