--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,4 +1,5 @@
 # Workflow using github.sha as tag for Docker image
+# and Docker official actions for build/push steps
 name: Docker build and publish
 
 on:
@@ -20,18 +21,31 @@ jobs:
       with:
         submodules: true
           
-    # Use github.sha as tag for Docker image
-    - name: Build and push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v5
+    # Use official action to setup Docker Buildx (needed for following steps)
+    # Docker Buildx is needed for docker/build-push-action
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    
+    # Use official action to login to Docker Hub
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
       with:
-        image: paolabelmonte/hugo-site
-        tags: ${{ github.sha }}
-        registry: docker.io
-        dockerfile: Dockerfile
         username: ${{ secrets.DOCKERHUB_USER }}
         password: ${{ secrets.DOCKERHUB_PSW }}
-
-    # Use action to perform replamcement of IMG_TAG in template-deploy.yaml
+        
+    # Use official action to build and push Docker image
+    - name: Build and push
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: paolabelmonte/hugo-site:${{ github.sha }}
+    
+    # Show Docker image digest using output of previous actions
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
+    
+    # Use action to perform replacement of IMG_TAG in template-deploy.yaml
     # after replacement save the file as my-deploy.yaml
     - name: Generate deploy yaml
       uses: danielr1996/envsubst-action@1.0.0
