--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -39,7 +39,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: paolabelmonte/hugo-site:${{ github.sha }}
+        tags: paolabelmonte/hugosite:${{ github.sha }}
     
     # Show Docker image digest using output of previous actions
     - name: Image digest
