--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -1,14 +1,12 @@
 # Workflow with checkout and docker-build-push
-# and non official action (mr-smithers) for build/push steps
-name: Docker build and publish
-
+# using official Docker action for build/push steps
 on:
   push:
     branches: [ main ]
 
 jobs:
 
-  build:
+  build-publish:
 
     runs-on: ubuntu-latest
 
@@ -21,13 +19,27 @@ jobs:
       with:
         submodules: true
           
-    # Use github.sha as tag for Docker image
-    - name: Build and push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v5
+    # Use official action to setup Docker Buildx (needed for following steps)
+    # Docker Buildx is needed for docker/build-push-action
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+    
+    # Use official action to login to Docker Hub
+    - name: Login to DockerHub
+      uses: docker/login-action@v1 
       with:
-        image: paolabelmonte/hugo-site
-        tags: v0
-        registry: docker.io
-        dockerfile: Dockerfile
         username: ${{ secrets.DOCKERHUB_USER }}
         password: ${{ secrets.DOCKERHUB_PSW }}
+        
+    # Use official action to build and push Docker image
+    - name: Build and push Docker image
+      id: docker_build
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: paolabelmonte/hugosite:${{ github.sha }}
+    
+    # Show Docker image digest using output of previous actions
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
+    
