--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -37,7 +37,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: paolabelmonte/hugosite:${{ github.sha }}
+        tags: paolabelmonte/hugosite:v0
     
     # Show Docker image digest using output of previous actions
     - name: Image digest
