--- a/template-deploy.yaml
+++ b/template-deploy.yaml
@@ -1,4 +1,4 @@
-#Prova template Paola
+# Template for complete deployment
 
 ---
 # Deployment
@@ -6,7 +6,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hugo-site
-  # VEDERE SE SERVE namespace: ${NAMESPACE}
 spec:
   selector:
     matchLabels:
@@ -17,10 +16,9 @@ spec:
       labels:
         app: hugo-site
     spec:
-      automountServiceAccountToken: false
       containers:
       - name: hugo-site
-        image: paolabelmonte/hugo-site:${IMG_TAG}
+        image: paolabelmonte/hugo-site:v0
         ports:
         - containerPort: 80
 ---
@@ -29,7 +27,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hugo-site
-  # VEDERE SE SERVE namespace: ${NAMESPACE}
   labels:
     app: hugo-site
 spec:
@@ -48,7 +45,6 @@ metadata:
   name: hugo-site
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-production
-  # VEDERE SE SERVE namespace: ${NAMESPACE}
 spec:
   tls:
   - hosts:
