--- a/template-deploy.yaml
+++ b/template-deploy.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: hugo-site
-        image: paolabelmonte/hugo-site::${IMG_TAG}
+        image: paolabelmonte/hugo-site:${IMG_TAG}
         ports:
         - containerPort: 80
 ---
